kdenetwork (4:4.7.2-0r0) UNRELEASED; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.7.2.
  * Bump build dependencies on other KDE SC packages to 4:4.7.
  * Add libmms-dev to Build-Depends.
  * Add ${perl:Depends} to kopete Depends.
  * Update installed files.
  * Update symbols files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 20 Oct 2011 12:55:24 -0300

kdenetwork (4:4.6.5-3) unstable; urgency=low

  [ José Manuel Santamaría Lema ]
  * Add libgadu_pthread_check.diff, fixes an FTBFS when building with
    libvncserver-dev supporting libgnutls.
  * Bump libvncserver-dev B-D to 0.9.8.1, this solves two problems:
    - libvncserver-dev now depends on libgnutls-dev, preventing an FTBFS.
    - fixes a binary compatibility issue. (see bug #644455)
  * Add protocols_namespaces.diff. Thanks to Ralf Jung for tracking down the
    issue and writing a significant part of the patch. (Closes: #644197)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 20 Oct 2011 12:55:24 -0300

kdenetwork (4:4.6.5-2) unstable; urgency=low

  * Confirm symbol files on Debian arches. Fixes FTBFSes.

 -- Modestas Vainius <modax@debian.org>  Sat, 23 Jul 2011 13:50:44 +0300

kdenetwork (4:4.6.5-1) unstable; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.5.
  * Update symbols files.

  [ Pino Toscano ]
  * Change libjpeg62-dev build-dependency to libjpeg-dev. (Closes: #633437)
  * Switch to my @debian.org address, I'm a DD now.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 18 Jul 2011 21:53:58 +0300

kdenetwork (4:4.6.3-1) unstable; urgency=low

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.6.3.

  [ Modestas Vainius ]
  * Merge 4:4.4.5-2+squeeze1 upload to squeeze: